# python-agent-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
src/: __init__.py
src/agent/: __init__.py
