[tool.poetry]
name = "python-agent-template"
version = "0.1.0"
description = "A production-ready template for building AI agents with LangChain and LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
# Environment & Configuration
python-decouple = "^3.8"
pyyaml = "^6.0"
pydantic = "^2.0"

# LangChain & LangGraph
langchain-community = "^0.4.1"
langchain-openai = "^1.1.7"
langgraph-checkpoint-sqlite = "^3.0.3"

# Data Science & Visualization (optional - remove if not needed)
pandas = "^2.0"
seaborn = "^0.13.0"
plotly = "^6.5.2"
scikit-learn = "^1.3.2"

# Web Framework (optional - remove if not building a UI)
streamlit = "^1.28.1"

# Jupyter Notebooks (optional)
jupyter = "^1.0.0"
jupyterlab = "^4.0.7"

# Development Tools
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^6.0"
pylint = "^3.0.2"
gitpython = "^3.1.40"

# Type Checking
pandas-stubs = "~=2.3.3"
grandalf = "^0.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
mypy = "^1.19.1"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "venv/",
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring (we rely on type hints)
    "R0903",  # too-few-public-methods (Pydantic models)
    "W0212",  # protected-access (sometimes needed for testing)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
